# ColorScope-CLI

./: .gitignore  LICENSE  README.md  pyproject.toml
colorscope/: __init__.py  cli.py  colorblind.py  contrast.py  report.py  suggestions.py
tests/: __init__.py  test_contrast.py
